gcc/testsuite/rust/rustc/ui/error-codes/E0116.rs
impl Vec<u8> {}
// { dg-error ".E0116." "" { target *-*-* } .-1 }

fn main() {
}

